base page register

--- a/resources/lang/vi/auth.json
+++ b/resources/lang/vi/auth.json
@@ -1,3 +1,5 @@
 {
-  "register_title_page": "Đăng kí tài khoản"
+  "register_title_page": "Đăng kí tài khoản",
+  "login_title_page": "Đăng nhập",
+  "already_account": "Đã có tài khoản?"
 }
