--- a/resources/lang/vi/auth.json
+++ b/resources/lang/vi/auth.json
@@ -1,5 +1,6 @@
 {
   "register_title_page": "Đăng kí tài khoản",
   "login_title_page": "Đăng nhập",
-  "already_account": "Đã có tài khoản?"
+  "already_account": "Đã có tài khoản?",
+  "not_already_account": "Chưa có tài khoản?"
 }
